assets/scss/molecules/cards/_photo-cta-card.scss
@mixin background-gradient($color) {
    .card-content .gradient {
        background-image: linear-gradient(45deg, rgba($color, 0.3) 0%, transparent 100%);
    }
}

.photo-cta-card {
    min-height: 540px;

    @include breakpoint(small only) {
        min-height: auto;
        margin-top: 35px;
    }

    .card-content {
        display: flex;
        overflow: hidden;
        position: relative;
        flex-direction: column;

        .image {
            width: 100%;
            height: 480px;
            position: relative;

            @include breakpoint(small only) {
                height: 360px;
            }

            img {
                width: 100%;
                height: 100%;
                object-fit: cover;
            }

            .gradient{
                top: 0;
                left: 0;
                opacity: 0;
                width: 100%;
                height: 100%;
                display: block;
                position: absolute;
                transition: opacity 0.5s ease;
                background-image: linear-gradient(45deg, rgba($yellow, 0.3) 0%, transparent 100%);
            }
        }

        .description {
            left: -1px;
            opacity: 0;
            width: 101%;
            bottom: -1px;
            overflow: hidden;
            padding-top: 25px;
            margin-top: -120px;
            background: $white;
            position: absolute;
            padding-right: 80px;
            display: -webkit-box;
            -webkit-line-clamp: 3;
            transform: translateY(100%);
            -webkit-box-orient: vertical;
            transition: $transition-primary;

            .card-description-text {
                opacity: 0;
                transition: $transition-primary;
                transition-delay: .3s;
            }

            @include breakpoint(medium down) {
                opacity: 1;
                padding-right: 20px;
            }

            @include breakpoint(small only) {
                opacity: 0;
            }
        }

        .cta {
            margin-top: 30px;

            @include breakpoint(small only) {
                margin-top: 10px;
            }
        }
    }

    &:hover{
        .link-arrow-group {
            transform: translateX(0);

            .arrow-line{
                display: unset;
            }

            .arrow-point{
                transform: translateX(31px);
            }
        }

        .description, .gradient {
            opacity: 1;
            transform: translateY(0);
        }

        .description {
            .card-description-text {
                opacity: 1;
            }
        }

        .image {
            .gradient {
                opacity: 1;
            }
        }
    }


    .accent-yellow &, &.accent-yellow {
        @include background-gradient($yellow);
    }

    .accent-green &, &.accent-green{
        @include background-gradient($green);
    }

    .accent-red &, &.accent-red{
        @include background-gradient($red);
    }

    .accent-blue &, &.accent-blue{
        @include background-gradient($blue-accent);
    }
}

